--- a/index.html
+++ b/index.html
@@ -1,19 +1,63 @@
-<html>
-    <head>
-        <title>Olá, eu sou a cabeça</title>
-    </head>
-    <body>
-        <h1>h1 Eu sou o corpo</h1>
-        <h2>h2 eu sou o corpo</h2>
-    </body>
-    <ol>
-        <li>Cafe</li>
-        <li>Cha</li>
-        <li>Leite</li>
-    </ol>
-    <ul>
-        <li>Cafe</li>
-        <li>Cha</li>
-        <li>Leite</li>
-    </ul>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gabrieli Padilha</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section left-section-content>
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpeg" alt="profile image">
+                    <p class="name">Gabrieli Padilha</p>
+                    <p class="profession">Product Disigner</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li>
+                            <i class="fa fa-phone">+55 99999-11111</i>
+                        </li>
+                        <li>
+                            <i class="fa fa-envelope">gabrielip.souza@outlook.com</i>
+                        </li>
+                        <li>
+                            <i class="fa fa-globe">www.site.com.br</i>
+                        </li>
+                        <li>
+                            <i class="fa fa-github">GabrieliPdilha</i>
+                        </li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title"> Skills</p>
+                    <ul>
+                        <li>
+                            <p>Vue, GraphQL, SQL</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>UX/UI</li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá! Sou Gabrieli.<br/>
+                        <br/> Um pouco mais do que faço
+                        <br/>Quais são minhas competencias
+                    </p>
+                </section>
+            </div>
+        </section>
+    </section>
+    </main>
+</body>
 </html>
