--- a/index.html
+++ b/index.html
@@ -56,8 +56,34 @@
                     </p>
                 </section>
             </div>
+            <section class="experience gap">
+                <div class="right-title">Experiência</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva aqui principais atividades
+                        </p>
+                    </div>
+                </div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva aqui principais atividades
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
-    </section>
     </main>
 </body>
 </html>
