--- a/index.html
+++ b/index.html
@@ -110,6 +110,27 @@
                     </div>
                 </div>
             </section>
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-name">EBAC</p>
+                        <p class="awards-desc">Junho de 2018</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de UX</p>
+                        <p class="awards-desc">Curso EBAC 2018</p>
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-name">EBAC</p>
+                        <p class="awards-desc">Junho de 2018</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de Análise de Dados</p>
+                        <p class="awards-desc">Curso EBAC 2019</p>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
