--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Santos CV</title>
+    <title>Gabrieli Padilha CV</title>
 
     <!-- Google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,7 +67,7 @@
 
                 <!-- experiencia -->
                 <section class="experience gap">
-                    <div class="right-title">Experiencia</div>
+                    <div class="right-title">experiência</div>
                     <div class="experience-contents">
                         <div class="exp-left">
                             <p class="exp-company-name">Almode Sistemas</p>
